<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteController Beta</string>
    <string name="action_settings">Settings</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="btn_scrollup">Up</string>
    <string name="btn_scrolldown">Down</string>
    <string name="txt_empty"></string>
    <string name="touch_pad">Touch Pad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_setting">activity_setting</string>
</resources>