<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:theme="@style/AlertDialog.AppCompat.Light"
    android:weightSum="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txv_mousePad"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:background="@color/mousepad"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/touch_pad"
        android:textColor="@color/grey3"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn_leftClick"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_weight="0.49"
            android:enabled="true"
            android:text="@string/btn_left"
            android:textStyle="bold"

            android:startColor="#449def"
            android:centerColor="#2f6699"
            android:endColor="#449def"
            android:angle="270"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:startColor="#449def"
            android:centerColor="#2f6699"
            android:endColor="#449def"
            android:angle="270">

            <Button
                android:id="@+id/btn_scrollup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/buttomclick"
                android:clickable="true"
                android:text="@string/btn_scrollup"
                android:startColor="#449def"
                android:centerColor="#2f6699"
                android:endColor="#449def"
                android:angle="270"
                />

            <Button
                android:id="@+id/btn_scrolldown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/buttomclick"
                android:clickable="true"
                android:text="@string/btn_scrolldown"
                android:startColor="#449def"
                android:centerColor="#2f6699"
                android:endColor="#449def"
                android:angle="270"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_rightClick"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_weight="0.43"
            android:text="@string/btn_right"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
